# ButtplugCPP

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake_build.yml
example/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
src/: ButtplugClient.cpp  ButtplugClient.h  ButtplugDevice.cpp  ButtplugDevice.h  ButtplugFFI.cpp  ButtplugFFI.h  ButtplugProto.cpp  ButtplugProto.h  CMakeLists.txt
